--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^12.4.7",
     "next": "15.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "remixicon-react": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -20,5 +21,29 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "tailwindcss": "^4"
+  },
+  "tailwindcss": {
+    "content": [
+      "./src/pages/**/*.{js,ts,jsx,tsx,mdx}",
+      "./src/components/**/*.{js,ts,jsx,tsx,mdx}",
+      "./src/app/**/*.{js,ts,jsx,tsx,mdx}"
+    ],
+    "theme": {
+      "extend": {
+        "backgroundImage": {
+          "gradient-radial": "radial-gradient(var(--tw-gradient-stops))",
+          "gradient-conic": "conic-gradient(from 180deg at 50% 50%, var(--tw-gradient-stops))"
+        }
+      },
+      "screens": {
+        "xl": { "max": "1400px" },
+        "lg": { "max": "1150px" },
+        "md": { "max": "767px" },
+        "sm": { "max": "639px" },
+        "xs": { "max": "393px" }
+      }
+    },
+    "plugins": [],
+    "darkMode": "class"
   }
 }
