--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "reactjs-localstorage": "^1.0.1",
     "remixicon-react": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "tailwindcss": "^4"
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4"
   },
   "tailwindcss": {
     "content": [
@@ -36,11 +39,21 @@
         }
       },
       "screens": {
-        "xl": { "max": "1400px" },
-        "lg": { "max": "1150px" },
-        "md": { "max": "767px" },
-        "sm": { "max": "639px" },
-        "xs": { "max": "393px" }
+        "xl": {
+          "max": "1400px"
+        },
+        "lg": {
+          "max": "1150px"
+        },
+        "md": {
+          "max": "767px"
+        },
+        "sm": {
+          "max": "639px"
+        },
+        "xs": {
+          "max": "393px"
+        }
       }
     },
     "plugins": [],
